<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Estadisticas" >

    <LinearLayout
        android:id="@+id/layoutPubli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        
    </LinearLayout>

    <ImageView
        android:id="@+id/elo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/diamon" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutPubli"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="25dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rodillas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/flexiones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/escalador"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/levantamientopiernas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sentadillas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/saltos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej7"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/zancadas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej8"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/abdominales"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:text="@string/ej9"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/flexionesunapierna"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>